# alertzarr

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: build.yml  demo.yml
data/sample_alerts/: copernicus_flood.json
infra/: bootstrap_minio.py
scripts/: download_stac_items.py
src/alertzarr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/autopilot/: __init__.py  alerts.py  catalog.py  cli.py  events.py  geozarr.py  listener.py  listener_cli.py  logging_utils.py  reporting.py  settings.py  stac.py  state.py  workflow_subscriber_cli.py  workflows.py
tests/: test_alerts.py  test_listener.py  test_reporting.py  test_settings.py  test_stac.py  test_state.py
