[project]
name = "alertzarr"
version = "0.1.0"
description = "Compact pipeline turning disaster alerts into GeoZarr + STAC artefacts"
authors = [{ name = "Cloud-Native Geo" }]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "aio_pika>=9.4",
    "aiobotocore[boto3]>=2.13",
    "rich>=13.8",
    "shapely>=2.0",
    "python-json-logger>=2.0",
    "orjson>=3.10",
    "pyproj>=3.6",
    "boto3>=1.34",
    "eopf-geozarr @ git+https://github.com/EOPF-Explorer/data-model.git@main",
]

[dependency-groups]
dev = ["pytest>=8.3", "ruff>=0.6", "pytest-asyncio>=0.23"]

[project.scripts]
alertzarr = "autopilot.cli:main"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
